full-moon/tests/cases/fail/parser/repeat-until-4/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/repeat-until-4
---
error[ast]: expected a condition after `until`
  ┌─ source.lua:3:1
  │
3 │ until end
  │ ^^^^^

error[ast]: unexpected token, this needs to be a statement
  ┌─ source.lua:3:7
  │
3 │ until end
  │       ^^^


